metadata-classic/objects/EnrollmentAction__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Enrollment__r.Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallbackAssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Callback Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AssignedEnrollmentAction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CallbackDateTime__c</fullName>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallbackOrigin__c</fullName>
        <label>Callback Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallbackOutreachType__c</fullName>
        <label>Callback Outreach Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OutreachType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallbackPhone__c</fullName>
        <label>Callback Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <formula>Enrollment__r.rca_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EnrollmentAction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedOn__c</fullName>
        <label>Completed On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <label>Enrollment</label>
        <referenceTo>Enrollment__c</referenceTo>
        <relationshipLabel>Enrollment Action</relationshipLabel>
        <relationshipName>EnrollmentSteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EventLogField__c</fullName>
        <label>Event Log Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EventLogObject__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>EventLogField</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventLogNewFieldValue__c</fullName>
        <label>Event Log New Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventLogObject__c</fullName>
        <label>Event Log Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EventLogObject</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventLogOldFieldValue__c</fullName>
        <label>Event Log Old Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for test records. Should only be true where the records should be ignored by analytics and are safe to delete.</description>
        <label>IsTest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutreachAttempts__c</fullName>
        <formula>Enrollment__r.OutreachAttempts__c</formula>
        <label>Outreach Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutreachContacted__c</fullName>
        <description>Determines if we contacted the pro during an outreach attempt.</description>
        <formula>IF(
CASE(OutreachDisposition__c, 
&quot;Callback scheduled&quot;, &quot;true&quot;, 
&quot;Callback needed not scheduled&quot;, &quot;true&quot;,
&quot;Wrong number&quot;, &quot;false&quot;,
&quot;No answer&quot;, &quot;false&quot;,
&quot;Left voicemail&quot;, &quot;false&quot;,
&quot;Disconnected phone number&quot;, &quot;false&quot;,
&quot;false&quot;) = &quot;true&quot;, true, false)</formula>
        <label>Outreach Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutreachDisposition__c</fullName>
        <label>Outreach Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EnrollmentOutreachDisposition</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutreachGroup__c</fullName>
        <label>Outreach Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EnrollmentOutreachGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProEmail__c</fullName>
        <label>Pro Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProFirstName__c</fullName>
        <formula>Enrollment__r.FirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleId__c</fullName>
        <label>Rule ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp; RuleId__c, &apos;View Rule&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EnrollmentActionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UserProfile__c</fullName>
        <label>User Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserTeam__c</fullName>
        <label>User Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>outreach_type__c</fullName>
        <label>Outreach Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OutreachType</valueSetName>
        </valueSet>
    </fields>
    <label>Enrollment Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Enrollment__c</columns>
        <columns>Outcome__c</columns>
        <columns>outreach_type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CreatedToday</fullName>
        <columns>NAME</columns>
        <columns>AccountName__c</columns>
        <columns>CompletedBy__c</columns>
        <columns>CompletedOn__c</columns>
        <columns>Details__c</columns>
        <columns>Outcome__c</columns>
        <columns>OutreachDisposition__c</columns>
        <columns>OutreachAttempts__c</columns>
        <columns>OutreachContacted__c</columns>
        <columns>OutreachGroup__c</columns>
        <columns>outreach_type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>x - Created Today</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mass_Update</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Enrollment__c</columns>
        <columns>EventLogOldFieldValue__c</columns>
        <columns>EventLogNewFieldValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Event Log</value>
        </filters>
        <filters>
            <field>CompletedOn__c</field>
            <operation>equals</operation>
            <value>7/18/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>EventLogNewFieldValue__c</field>
            <operation>equals</operation>
            <value>Live on Instant Match</value>
        </filters>
        <label>*Mass Update</label>
    </listViews>
    <nameField>
        <label>Enrollment Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Action</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>The standard enrollment action record type.</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>